Scripts folders organization. Should work on feedback after end SoundTableActivity.kt buttons implementation

--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:contentDescription="@string/image_main_menu"
-    tools:context=".MainMenuFragment">
+    tools:context=".main.MainMenuFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
