Cambiando el layout del SoundTable Activity para poder trabajar con 2 audios. Empezando a implementar el MediaPlayer.

--- a/app/src/main/res/layout/activity_sound_table.xml
+++ b/app/src/main/res/layout/activity_sound_table.xml
@@ -7,44 +7,98 @@
     tools:context=".soundtable.SoundTableActivity">
 
     <TextView
+        android:id="@+id/titlesound2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="@string/title_sound"
+        app:layout_constraintBottom_toTopOf="@+id/durationBar2"
+        app:layout_constraintEnd_toStartOf="@+id/duration2"
+        app:layout_constraintStart_toEndOf="@+id/actualDuration2" />
+
+    <TextView
+        android:id="@+id/actualDuration2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
+        android:text="0"
+        app:layout_constraintBottom_toBottomOf="@+id/durationBar2"
+        app:layout_constraintEnd_toStartOf="@+id/durationBar2"
+        app:layout_constraintTop_toTopOf="@+id/durationBar2"
+        app:layout_constraintVertical_bias="0.475" />
+
+    <ProgressBar
+        android:id="@+id/durationBar2"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="100dp"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toTopOf="@+id/actionsLayout"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/duration2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:text="0"
+        app:layout_constraintBottom_toBottomOf="@+id/durationBar2"
+        app:layout_constraintStart_toEndOf="@+id/durationBar2"
+        app:layout_constraintTop_toTopOf="@+id/durationBar2"
+        app:layout_constraintVertical_bias="0.475" />
+
+    <TextView
         android:id="@+id/titlesound"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:text="@string/title_sound"
-        app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/durationBar"
+        app:layout_constraintEnd_toEndOf="@+id/durationBar"
+        app:layout_constraintHorizontal_bias="0.479"
+        app:layout_constraintStart_toStartOf="@+id/durationBar" />
 
     <TextView
-        android:id="@+id/duration"
+        android:id="@+id/actualDuration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
         android:text="0"
-        app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.025"
-        app:layout_constraintStart_toEndOf="@+id/durationBar"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.625" />
+        app:layout_constraintBottom_toBottomOf="@+id/durationBar"
+        app:layout_constraintEnd_toStartOf="@+id/durationBar"
+        app:layout_constraintTop_toTopOf="@+id/durationBar"
+        app:layout_constraintVertical_bias="0.475" />
 
     <ProgressBar
         android:id="@+id/durationBar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titlesound" />
+        android:layout_marginStart="100dp"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toTopOf="@+id/actionsLayout"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/duration"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:text="0"
+        app:layout_constraintBottom_toBottomOf="@+id/durationBar"
+        app:layout_constraintStart_toEndOf="@+id/durationBar"
+        app:layout_constraintTop_toTopOf="@+id/durationBar"
+        app:layout_constraintVertical_bias="0.475" />
 
     <TableLayout
         android:id="@+id/actionsLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
         app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
-        app:layout_constraintStart_toEndOf="@+id/buttonsLayout">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <TableRow
             android:id="@+id/aRowButtons"
@@ -70,11 +124,12 @@
                 app:iconTint="@color/white" />
 
             <Button
-                android:id="@+id/stButtonStop"
+                android:id="@+id/stButtonRec"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:scaleX="0.8"
                 app:backgroundTint="#0022AC"
+                app:icon="@drawable/ic_baseline_fiber_manual_record_24"
                 app:iconTint="@color/white" />
         </TableRow>
 
@@ -84,11 +139,10 @@
         android:id="@+id/buttonsLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.8">
+        app:layout_constraintStart_toStartOf="parent">
 
         <TableRow
             android:id="@+id/firstRowButtons"
@@ -229,17 +283,5 @@
         </TableRow>
 
     </TableLayout>
-
-    <TextView
-        android:id="@+id/actualDuration"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0"
-        app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
-        app:layout_constraintEnd_toStartOf="@+id/durationBar"
-        app:layout_constraintHorizontal_bias="0.975"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.625" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
