--- a/app/src/main/res/layout/activity_drag_ndrop.xml
+++ b/app/src/main/res/layout/activity_drag_ndrop.xml
@@ -27,9 +27,20 @@
         android:paddingHorizontal="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chipGroupTop">
 
     </com.google.android.material.chip.ChipGroup>
+
+    <ImageView
+        android:id="@+id/chipTrash"
+        android:layout_width="135dp"
+        android:layout_height="135dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/blackhole" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
