Lets go! Focus del audio y reproduccion/ pause y stop hechos

--- a/app/src/main/res/layout/activity_sound_table.xml
+++ b/app/src/main/res/layout/activity_sound_table.xml
@@ -125,7 +125,7 @@
                 app:iconTint="@color/white" />
 
             <Button
-                android:id="@+id/stButtonRec"
+                android:id="@+id/stButtonStop"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:scaleX="0.8"
