--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -9,13 +9,16 @@
     tools:context=".main.MainMenuFragment">
 
 
-
     <TextView
         android:id="@+id/menu_title_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="25dp"
         android:text="@string/title_main_menu"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="34sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,14 +27,14 @@
         android:id="@+id/menu_image"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginBottom="80dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="50dp"
+        android:contentDescription="@+id/UWU"
         app:layout_constraintBottom_toTopOf="@+id/menu_description_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/menu_title_text"
-        tools:src="@drawable/ic_launcher_foreground"
-        android:contentDescription="@+id/UWU" />
+        tools:src="@drawable/ic_launcher_foreground" />
 
     <TextView
         android:id="@+id/menu_description_text"
@@ -39,6 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="100dp"
         android:text="@string/description_main_menu"
+        android:textColor="#121212"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
